@@ -14,16 +14,18 @@
       </entries>
 
       <properties>
-        <property name="source" type="string" required="yes"/>
-        <property name="port" type="int" required="yes"/>
-        <property name="logfile" type="string"/>
-        <property name="gst-property" type="xml" multiple="yes"/>
+        <property name="source" type="string" required="yes" />
+        <property name="port" type="int" required="yes" />
+        <property name="logfile" type="string" />
+        <property name="gst-property" type="xml" multiple="yes" />
+        <property name="bouncer" type="string" />
+        <property name="mount_point" type="string" />
+        <property name="domain" type="string" />
+        <property name="user_limit" type="int" />
+        <property name="bandwidth_limit" type="int" />
         <!-- F0.2: deprecate -->
         <property name="admin-password" type="string"/>
         <property name="maxclients" type="int"/>
-        <property name="bouncer" type="string"/>
-        <property name="mount_point" type="string"/>
-        <property name="domain" type="string"/>
       </properties>
     </component>
   </components>
